// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`furet-ui-thumbnail-button component Render icon 1`] = `<a data-server-rendered="true" class="button"><span class="icon"><i class="fa fa-underline"></i></span><span>The label</span></a>`;

exports[`furet-ui-thumbnail-button component Render invisible 1`] = `<!---->`;

exports[`furet-ui-thumbnail-button component Render visible 1`] = `<a data-server-rendered="true" class="button"><span>The label</span></a>`;

exports[`furet-ui-thumbnail-group component Render invisible 1`] = `<!---->`;

exports[`furet-ui-thumbnail-group component Render visible 1`] = `<div data-server-rendered="true"><span>Test</span></div>`;

exports[`furet-ui-thumbnail-view component Render with data 1 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
            <article class="box content" style="padding:5px;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span></span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span> --- </span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span></span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span></span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span> --- </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span></span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span></span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span> --- </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span></span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-thumbnail-view component Render with data 2 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
            <article class="box content" style="padding:5px;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span>
                        <span
                            class="control-label">
                            Boolean
                            </span>
                            </label>
                            </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 1</span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>1</span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 2</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>2</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 3</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>3</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-thumbnail-view component Render with data 3 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
            <article class="box content" style="padding:5px;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 1 bis</span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>1</span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 2</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>2</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 3</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>3</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-thumbnail-view component Render with data background fieldcolor 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
            <article class="box content" style="padding:5px;background-color:#123456;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 1 bis</span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>1</span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 2</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>2</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 3</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>3</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;background-color:#789ABC;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 4</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>4</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-thumbnail-view component Render with data border fieldcolor 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
            <article class="box content" style="padding:5px;border:3px solid #123456;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 1 bis</span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>1</span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 2</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>2</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 3</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>3</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-third-tablet is-one-quarter-desktop">
    <article class="box content" style="padding:5px;border:3px solid #789ABC;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 4</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>4</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-thumbnail-view component Render without data 1`] = `
<div data-server-rendered="true" style="margin-bottom:20px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <!---->
                <!---->
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile"></div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render with data 1 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile"></div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render with data 2 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="is-info is-left is-medium tooltip"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
            <article class="box content" style="padding:5px;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span>
                        <span
                            class="control-label">
                            Boolean
                            </span>
                            </label>
                            </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 1</span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>1</span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 2</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>2</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 3</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>3</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span></span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span> --- </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span></span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render with data 2 2`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="is-info is-left is-medium tooltip"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
            <article class="box content" style="padding:5px;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 1 bis</span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>1</span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 2</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>2</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 3</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>3</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span></span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span> --- </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span></span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render with data background fieldcolor 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="is-info is-left is-medium tooltip"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
            <article class="box content" style="padding:5px;background-color:#123456;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 1 bis</span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>1</span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 2</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>2</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 3</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>3</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;background-color:#789ABC;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 4</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>4</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render with data border fieldcolor 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="is-info is-left is-medium tooltip"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
            <article class="box content" style="padding:5px;border:3px solid #123456;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 1 bis</span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>1</span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 2</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>2</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 3</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>3</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;border:3px solid #789ABC;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true" checked="checked"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span>Label 4</span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span>New</span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span>4</span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render without data 1 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <!---->
        </div>
    </nav>
    <div class="columns is-multiline is-mobile"></div>
</div>
`;

exports[`furet-ui-x2m-thumbnail-view component Render without data 2 1`] = `
<div data-server-rendered="true" style="margin-bottom:10px;">
    <nav class="level">
        <div class="level-left">
            <div class="field has-addons">
                <p class="control"><a class="button"><span class="icon is-small"><i class="fa fa-plus"></i></span> <span>Create</span></a></p>
            </div>
        </div>
        <div class="level-right">
            <div class="field has-addons">
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
                <!---->
                <p class="control"><span class="is-info is-left is-medium tooltip"><a class="button"><span class="icon is-small"><!----></span></a>
                    </span>
                </p>
            </div>
        </div>
    </nav>
    <div class="columns is-multiline is-mobile">
        <div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
            <article class="box content" style="padding:5px;">
                <div class="columns is-multiline is-mobile">
                    <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                        </span>
                    </div>
                    <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span></span>
                        <!---->
                    </div>
                    </span>
                </div>
                <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span> --- </span>
                    <!---->
                </div>
                </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span></span>
            <!---->
        </div>
        </span>
    </div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span></span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span> --- </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span></span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
<div class="column is-12-mobile is-one-half-tablet is-one-third-desktop">
    <article class="box content" style="padding:5px;">
        <div class="columns is-multiline is-mobile">
            <div class="column is-4"><span data-label="" class="is-primary is-top is-medium tooltip"><label disabled="disabled" class="checkbox is-disabled"><input type="checkbox" disabled="disabled" true-value="true"> <span class="check"></span> <span class="control-label">
                Boolean
            </span></label>
                </span>
            </div>
            <div class="column is-8"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">Label</label> <span></span>
                <!---->
            </div>
            </span>
        </div>
        <div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">State</label> <span> --- </span>
            <!---->
        </div>
        </span>
</div>
<div class="column is-6"><span data-label="" class="is-primary is-top is-medium tooltip" style="width:100%;"><div class="field" style="width:inherit;"><label class="label">ID</label> <span></span>
    <!---->
</div>
</span>
</div>
</div>
</article>
</div>
</div>
</div>
`;
